clusters/k3s-cluster/headlamp/headlamp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headlamp
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  namespace: headlamp
spec:
  rules:
    - host: dashboard.jacobbanghart.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: headlamp
                port:
                  number: 80
